RESOLVED FIXED 265034
[WPE][GTK] Fix VideoFrameGStreamer include for build with WebCodecs and without MediaStream
https://bugs.webkit.org/show_bug.cgi?id=265034
Summary [WPE][GTK] Fix VideoFrameGStreamer include for build with WebCodecs and witho...
Olivier Blin
Reported 2023-11-17 07:19:50 PST
VideoFrameGStreamer.h is not included if WebCodecs is enabled without MediaStream.
Attachments
Olivier Blin
Comment 1 2023-11-17 07:21:54 PST
EWS
Comment 2 2023-11-17 10:26:55 PST
Committed 270901@main (eb12f0694435): <https://commits.webkit.org/270901@main> Reviewed commits have been landed. Closing PR #20669 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.