[WPE][GTK] Fix VideoFrameGStreamer include for build with WebCodecs and without MediaStream https://bugs.webkit.org/show_bug.cgi?id=265034

Reviewed by Michael Catanzaro.

VideoFrameGStreamer.h was not included if WebCodecs was enabled but not MediaStream.

* Source/WebCore/platform/graphics/gbm/GraphicsContextGLGBM.cpp:
* Source/WebCore/platform/graphics/texmap/GraphicsContextGLTextureMapperANGLE.cpp:

Canonical link: https://commits.webkit.org/270901@main